<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SaveMe</string>
    <string name="default_notification_channel_id" translatable="false">notifications_upload</string>
    <string name="upload_channel_name">Wysyłanie plików</string>
    <string name="upload_channel_description">Kanał powiadomień</string>
    <string name="mainactivity_help">Pomoc</string>
    <string name="mainactivity_login">Portal dla pomocników</string>
    <string name="report_a_user_button">Zgłoś użytkownika</string>
    <string name="header_select_theme">Motyw</string>
    <string name="standard">Standardowy</string>
    <string name="color_blind">Ślepota barw</string>
    <string name="app_policy">Nota prawna</string>
    <string name="contact">Kontakt</string>
    <string name="contributor_list">Lista wolontariuszy</string>
    <string name="policy_note">Administrator dołoży wszelkich starań, by materiał zawarty w serwisie był kompletny i oferował wyższy standard pomocy, jednak nie może on udzielić żadnej gwarancji - wyrażonej w sposób jednoznaczny czy implikowany - że prezentowane w serwisie treści pozbawione są jakichkolwiek błędów i niedokładności. Administrator nie ponosi odpowiedzialności za wykroczenia popełnione przez wolontariuszy, użytkownicy proszeni są o zgłaszanie ich w trybie natychmiastowym w celu automatycznego zablokowania ich konta. Treść poradników nie jest w stanie ani nie usiłuje zastąpić szkoleń w zakresie pierwszej pomocy udzielanych przez profesjonalistów, ma na celu jedynie częściowe doinformowanie osób które nie posiadają odpowiedniej wiedzy w przypadku gdy czas jest krytycznie ograniczony. Administrator nie rości sobie praw do żadnych treści multimedialnych opublikowanych w tym serwisie. Wszelkie zastrzeżenia dotyczące praw autorskich proszę kierować do lkorzechowski@gmail.com. Treści opublikowane w aplikacji należą do poszczególnych autorów i mogą zostać usunięte na ich życzenie.</string>
    <string name="image_default_no_description">Autor nie podał opisu obrazu</string>
    <string name="contact_email">E-mail autora aplikacji: savemeorzechowski@gmail.com</string>
    <string name="contact_write_email_button">Wyślij E-mail</string>
    <string name="send">Wyślij</string>
    <string name="form_content_hint">Proszę podać treść zgłoszenia</string>
    <string name="search_button">Wyszukiwarka</string>
    <string name="search_hint">Podaj treść wyszukiwania</string>
    <string name="suggestion_text">Być może chodzi ci o:</string>
    <string name="login_mode_button_register_text">Zarejestruj się</string>
    <string name="login_mode_button_login_text">Zaloguj się</string>
    <string name="login_email_address_header">Adres E-mail</string>
    <string name="three_dots">…</string>
    <string name="login_password_header">Hasło</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Rejestracja</string>
    <string name="password_repeat">Powtórz hasło</string>
    <string name="phone_icon_description">Ikonka telefonu</string>
    <string name="default_author_unknown_label">Autor nieznany</string>
    <string name="instruction_creator_subheading">Dodaj dowolną ilość, przypisz do dowolnej ilości wersji (późniejszy krok), dodaj narrację. Maksymalna długość narracji to 20 sekund.</string>
    <string name="version_creator_subheading">Dodaj dowolną ilość. Czy instrukcje w poradniku powinny różnić się zależnie od sytuacji? Czy niektóre kroki można pominąć? Wersje można równie podzielić na kroki i rozgałęziać. "Drzewo" wersji ustawisz w kolejnym kroku.</string>
    <string name="multimedia_creator_subheading">Zdjęcia, filmiki, początek i koniec. Mają się powtarzać, czy mają się wyświetlać nieustannie? Jeżeli nie zostaną ustawione na powtarzanie, zostaną odjęte z kolejki po jednym wyświetleniu.</string>
    <string name="plus">+</string>
    <string name="delete_new_instruction">Ten przycisk usuwa instrukcję</string>
    <string name="new_multimedia_display_time_input_hint">Podaj czas wyświetlania zdjęcia/filmiku, możesz zostawić to pole puste. W przypadku zdjęcia wyświetlane będzie ono stale, w przypadku filmiku zostanie on odtworzony od początku do końca.</string>
    <string name="new_multimedia_display_time_info_text">Czas wyświetlania w sekundach</string>
    <string name="new_multimedia_loop_checkbox_info">Zaznacz jeżeli multimedia mają być w pętli</string>
    <string name="zero">000000</string>
    <string name="new_version_text_hint">Tekst który użytkownik ujrzy na odpowiednim przycisku podczas wybierania wersji.</string>
    <string name="new_version_delay_label_text">Jeżeli ustawiłaś/eś tylko jeden dźwięk globalny, możesz zrezygnować z opóźniania go.</string>
    <string name="version_creator_heading">Wersje</string>
    <string name="instruction_creator_heading">Instrukcje</string>
    <string name="multimedia_creator_heading">Multimedia</string>
    <string name="delete_new_media">Ten przycisk usuwa nowe multimedia</string>
    <string name="delete_new_version">Ten przycisk usuwa nową wersję</string>
    <string name="delete_new_sound">Ten przycisk usuwa dźwięk</string>
    <string name="sound_creator_heading">Dźwięki globalne</string>
    <string name="sound_creator_subheading">Dźwięki globalne, wyzwalane w wybranym momencie lub od samego początku. Mogą się powtarzać, mogą dyktować tempo, dozwolona jest dowolna ilość.</string>
    <string name="new_sound_start_label">Początek odtwarzania dźwięku, w sekundach od uruchomienia poradnika.</string>
    <string name="new_sound_interval_label">Długość odtwarzania i czekania po odtwarzaniu dźwięku łącznie (w przypadku zapętlonych dźwięków)</string>
    <string name="new_sound_loop_label">Czy dźwięk ma być zapętlony?</string>
    <string name="new_version_small_subheading">Podaj krótki opis wersji</string>
    <string name="new_instruction_title_label">Tytuł</string>
    <string name="new_instruction_label">Treść</string>
    <string name="new_instruction_text">Dowolnie długa treść</string>
    <string name="new_instruction_title">Tytuł, do 32 znaków</string>
    <string name="new_instruction_time_label">Czas trwania</string>
    <string name="new_instruction_time_input">Ile czasu trwa narracja? Czytanie trwa dłużej.</string>
    <string name="next">Dalej</string>
    <string name="fragment_version_tree_heading">Na tym etapie utworzysz drzewko z wersji. Wybierz dowolną z poniższych wersji i przesuń ją w dół na odpowiedni poziom (ograniczenie do 4 poziomów), jeżeli nie jest na najwyższym poziomie musisz przypisać jej rodzica.</string>
    <string name="version_text_rv_header">Nazwy poszczególnych wersji</string>
    <string name="parent_asignment_label">Przypisz rodzica wersji którą przemieściłeś/aś poziom niżej. Naciśnij strzałkę w dół aby przemieścić wersję dalej w dół.</string>
    <string name="cancel">Anuluj</string>
    <string name="version_instruction_heading">Przypisz instrukcje do poszczególnych wersji. Naciśnij na numer instrukcji aby została przypisana.</string>
    <string name="instruction_text_rv_label">Treść poszczególnych instrukcji</string>
    <string name="version_multimedia_heading">Przypisz multimedia do poszczególnych wersji. Jeżeli nie widzisz wstawionych przez ciebie multimediów, nie udało się ich pobrać. Spróbuj zmienić format.</string>
    <string name="image_grid_header">Wybierz obraz</string>
    <string name="star">star</string>
    <string name="category_rv_header_default">Musisz teraz określić kategorię nowego poradnika aby umiejscowić go w katalogu. Wybierz z poniższej listy główną kategorię a następnie kolejne bardziej szczegółowe.</string>
    <string name="instructions_not_provided">Nie podano instrukcji lub są zbyt krótkie</string>
    <string name="version_instructions_not_assigned">Nie przypisano żadnych instrukcji do wersji</string>
    <string name="version_multimedia_not_assigned">Nie przypisano multimediów</string>
    <string name="helper_toggle_button">Pomagam</string>
    <string name="helper_create_tutorial">Utwórz nowy poradnik</string>
    <string name="helper_settings_button">Ustawienia</string>
    <string name="helper_peer_review_button">Zatwierdź poradniki</string>
    <string name="narration_recycler_header">Poniższe pliki mieszczą się w limicie czasowym 20 sekund</string>
    <string name="sound_recycler_header">Wybierz dźwięk</string>
    <string name="keyword_input">Wpisz słowo kluczowe</string>
    <string name="suggested_keyword_tap_icon">Palec naciskający ekran</string>
    <string name="category_assignment_header_second_step">Wpisz w polu tag twojego poradnika. Może to być tłumaczenie tytułu w języku angielskim.</string>
    <string name="tag_insert_hint">Słowo klucz, wskazówka</string>
    <string name="tag_insert_value_too_short">Słowo musi mieć co najmniej 4 znaki</string>
    <string name="keyword_assignment_header">Podaj słowa kluczowe które pomogą użytkownikowi znaleźć twój poradnik przy użyciu wyszukiwarki. Wpisz śmiało jak największą ilość słów, różne odmiany słów, im więcej tym lepiej, nawet do stu!</string>
    <string name="sign_in_button_cover">Portal dla wolontariuszy</string>
    <string name="tutorial_link_heading_primary">Linki. Możesz przypisać każdej instrukcji w poradniku link do innego poradnika. Podczas odtwarzania danej instrukcji na ekranie wyświetli się przycisk przenoszący użytkownika, np. do poradnika \'Masaż serca\'.</string>
    <string name="tutorial_link_heading_tutorials">Wybierz poradnik do którego ma prowadzić twój link.</string>
    <string name="tutorial_link_heading_instructions">Wybierz instrukcję do której załączony będzie ten link.</string>
    <string name="tutorial_link_edit_tutorial">Wybierz nowy poradnik</string>
    <string name="tutorial_link_edit_instruction">Wybierz inną instrukcję</string>
    <string name="creator_uploading_data_info">Twój poradnik jest wysyłany na serwer.</string>
    <string name="keyword_assignment_word_too_short">Słowo musi mieć co najmniej 3 znaki</string>
    <string name="link_edit_button">Edytuj</string>
    <string name="link_delete_button">Usuń</string>
    <string name="link_edit">Co chciałbyś/ałabyć zmienić?</string>
    <string name="tutorial_loading_info">Aplikacja pobiera pozostałe dane.</string>
    <string name="skip">Pomiń</string>
    <string name="title">Tytuł:</string>
    <string name="tutorial_title_input">Wpisz tytuł</string>
    <string name="tutorial_miniature_upload_button">Wstaw miniaturkę</string>
    <string name="unverified_helper_info">Nie jesteś zweryfikowany/a! Aby móc publikować treść musisz dostarczyć poświadczenie odpowiednich kwalifikacji w formie zdjęcia/skanu dokumentu. Dokumenty przesłane na serwer nie są upubliczniane, dostęp do nich ma i będzie mieć wyłącznie adminstrator.</string>
    <string name="verify_button">Zweryfikuj się!</string>
    <string name="verify_button_post_upload">Zmień obraz</string>
    <string name="document_upload_button">Wyślij dokument</string>
    <string name="unverified_helper_awaiting_response">Twój dokument został przesłany, trwa oczekiwanie na odpowiedź administratora, prosimy o cierpliwość.</string>
    <string name="name">Imię</string>
    <string name="surname">Nazwisko</string>
    <string name="profession">Zawód</string>
    <string name="number">Numer</string>
    <string name="submit_helper_settings_button">Wyślij zmienione dane</string>
    <string name="main_call_info">Aby nawiązywać połączenia telefoniczne za pośrednictwem aplikacji wymagane są środki na koncie</string>
    <string name="main_internet_info">W przypadku braku połączenia z internetem narracje i obrazy nie będą dostępne</string>
    <string name="version_sound_heading">Podobnie jak w poprzednim kroku, musisz przypisać, tym razem dźwięki, do poszczególnych wersji.</string>
    <string name="reject">Odrzuć</string>
    <string name="accept">Zaakceptuj</string>
    <string name="play">Odtwórz</string>
</resources>