<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelperActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/unverified_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/unverified_helper_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unverified_helper_info"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/verify_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/unverified_helper_info"/>

        <ImageView
            android:id="@+id/document_display"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/image_default_no_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verify_button"/>

        <Button
            android:id="@+id/document_upload_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:text="@string/document_upload_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/document_display"
            app:layout_constraintBottom_toBottomOf="@id/document_display"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_overlay_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
