<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/version_creator_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_creator_heading"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/version_creator_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_creator_subheading"
            app:layout_constraintTop_toBottomOf="@+id/version_creator_heading"
            app:layout_constraintBottom_toTopOf="@id/layout_version_creator" />

        <LinearLayout
            android:id="@+id/layout_version_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/version_creator_subheading"
            app:layout_constraintBottom_toTopOf="@id/instruction_creator_heading" />

        <TextView
            android:id="@+id/instruction_creator_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_creator_heading"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_version_creator" />

        <TextView
            android:id="@+id/instruction_creator_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction_creator_subheading"
            app:layout_constraintTop_toBottomOf="@id/instruction_creator_heading"
            app:layout_constraintBottom_toTopOf="@id/layout_instruction_creator" />

        <LinearLayout
            android:id="@+id/layout_instruction_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/instruction_creator_subheading"
            app:layout_constraintBottom_toTopOf="@id/multimedia_creator_heading" />

        <TextView
            android:id="@+id/multimedia_creator_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multimedia_creator_heading"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_instruction_creator" />

        <TextView
            android:id="@+id/multimedia_creator_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/multimedia_creator_subheading"
            app:layout_constraintTop_toBottomOf="@id/multimedia_creator_heading"
            app:layout_constraintBottom_toTopOf="@id/layout_multimedia_creator" />

        <LinearLayout
            android:id="@+id/layout_multimedia_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/multimedia_creator_subheading"
            app:layout_constraintBottom_toTopOf="@id/sound_creator_heading" />

        <TextView
            android:id="@+id/sound_creator_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_creator_heading"
            android:textStyle="bold"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_multimedia_creator" />

        <TextView
            android:id="@+id/sound_creator_subheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sound_creator_subheading"
            app:layout_constraintTop_toBottomOf="@id/sound_creator_heading"
            app:layout_constraintBottom_toTopOf="@id/layout_sound_creator" />

        <LinearLayout
            android:id="@+id/layout_sound_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/sound_creator_subheading"
            app:layout_constraintBottom_toTopOf="@+id/creator_step_one_button" />

        <Button
            android:id="@+id/creator_step_one_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_step_one_button"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
