<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/tutorial_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image_default_no_description"/>

    <TextView
        android:id="@+id/tutorial_name"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tutorial_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/peer_review_row_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow1"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_image"/>

    <Button
        android:id="@+id/review_play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textSize="12sp"
        android:backgroundTint="#0000FF"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@id/peer_review_row_separator"
        app:layout_constraintEnd_toStartOf="@id/review_accept_button"/>

    <Button
        android:id="@+id/review_accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        android:textSize="12sp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toTopOf="@id/peer_review_row_separator"
        app:layout_constraintEnd_toStartOf="@id/review_reject_button"/>

    <Button
        android:id="@+id/review_reject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reject"
        android:textSize="12sp"
        android:backgroundTint="#FF0000"
        app:layout_constraintBottom_toTopOf="@id/peer_review_row_separator"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
