<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".helper.HelperSettings">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/name"
        app:layout_constraintTop_toTopOf="@id/name_edit"
        app:layout_constraintBottom_toBottomOf="@id/name_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/surname_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/surname"
        app:layout_constraintTop_toTopOf="@id/surname_edit"
        app:layout_constraintBottom_toBottomOf="@id/surname_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/title_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/title"
        app:layout_constraintTop_toTopOf="@id/title_edit"
        app:layout_constraintBottom_toBottomOf="@id/title_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/profession_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/profession"
        app:layout_constraintTop_toTopOf="@id/profession_edit"
        app:layout_constraintBottom_toBottomOf="@id/profession_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/phone_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/number"
        app:layout_constraintTop_toTopOf="@id/phone_edit"
        app:layout_constraintBottom_toBottomOf="@id/phone_edit"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="64"
        android:autofillHints="false"
        android:inputType="text"
        android:hint="@string/name"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/surname_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="64"
        android:autofillHints="false"
        android:inputType="text"
        android:hint="@string/surname"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/name_edit"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/title_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="16"
        android:autofillHints="false"
        android:inputType="text"
        android:hint="@string/title"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/surname_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/profession_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="32"
        android:autofillHints="false"
        android:inputType="text"
        android:hint="@string/profession"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/title_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/phone_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:autofillHints="false"
        android:inputType="phone"
        android:hint="@string/number"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profession_edit"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/submit_helper_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_helper_settings_button"
        app:layout_constraintTop_toBottomOf="@id/phone_edit"/>

    <Button
        android:id="@+id/cancel_helper_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/submit_helper_settings_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>