<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/delete_new_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_new_version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_version_small_subheading"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow1"
        app:layout_constraintTop_toBottomOf="@+id/delete_new_version"/>

    <EditText
        android:id="@+id/new_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_version_text_hint"
        android:autofillHints="false"
        android:inputType="textMultiLine"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/title_bar"
        android:backgroundTint="#151515"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/delete_new_version"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/new_version_delay_sound_label"
        android:layout_width="0dp"
        android:paddingTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/new_version_delay_label_text"
        app:layout_constraintEnd_toStartOf="@id/new_version_delay_sound_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_version_text"/>

    <CheckBox
        android:id="@+id/new_version_delay_sound_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/new_version_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow1"
        app:layout_constraintTop_toBottomOf="@+id/new_version_delay_sound_checkbox"/>

</androidx.constraintlayout.widget.ConstraintLayout>
